--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -6,6 +6,8 @@
 <th>
 業種名
 </th>
+</tr>
+<tr>
 <td>
 <%= f.text_field :name %>
 </td>
@@ -17,10 +19,7 @@
 </tbody>
 </table>
 
-<div class="container">
-<div class="row">
-<div class ="col-m-4"></div>
-<table class = "genre-table" width="50%">
+<table class = "genre-table">
 <tbody>
 <tr>
 <th>
@@ -47,5 +46,3 @@
 <% end %>
 </tbody>
 </table>
-</div>
-</div>
