--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,10 +11,10 @@
 <%= f.text_field :last_name %></br>
 </br>
 自己紹介</br>
-<%= f.text_area :introduction, size: "50x8" %>
+<%= f.text_area :introduction, size: "35x8" %>
 </br>
-<div class ="user-button">
-<input class="btn btn-success" type="submit" style="width:220px" value="変更を保存">
+<div class ="edit-button">
+<input class="btn btn-success" type="submit" style="width:200px" value="変更を保存">
 </div>
 <% end %>
 </div>
