--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,7 @@ main {
 }
 header{
   width: 100vw;
+  padding-left: 10px;
 }
 footer{
   width: 100vw;
@@ -36,6 +37,15 @@ a {
   text-decoration: none !important;
 }
 
+#back {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+#back img{
+  width: 50px;
+  height: 50px;
+}
 
 .icon{
   margin: 0 30px;
@@ -59,7 +69,6 @@ a {
 .col-md-7{
   margin: 0 auto;
 }
-
 
 
 
