--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -15,39 +15,44 @@ table td {
 
 .genre-table{
   margin: 20px auto 10px;
+  width: 50%;
 }
 
 .genre-edit-box{
   height: 500px;
   margin-left: 300px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 848px) {
   .genre-edit-box{
     margin-left: 150px;
   }
-}
-@media screen and (max-width: 425px) {
-  .genre-box{
-    margin-left: 150px;
-  }
-  
   .genre-table{
-    margin-left: 60px;
+   width: 100vw;
   }
+}
+@media screen and (max-width: 700px){
   .genre-edit-box{
-    margin-left: 30px;
-  }
+  width: 100vw;
+  height: 100vh;
+  margin-left: 50px;
+ }
+  
 }
-@media screen and (max-width: 375px) {
-  .genre-box{
-    margin-left: 110px;
-  }
+@media screen and (max-width: 425px){
+ .genre-box{
+  margin: 0px;
+  width: 100vw;
+ }
+
+ .genre-table{
+  margin: 0px;
+  width: 100vw;
+ }
+
 }
 
-@media screen and (max-width: 320px) {
-  .genre-box{
-    margin-left: 100px;
-    width: 90%;
-  }
-
+@media screen and (max-width: 380px){
+  .genre-table tr td{
+  display: block;
+ }
 }
