--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,11 +1,7 @@
 <div class ="error">
 <% if @experience.errors.any? %>
   <%= @experience.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @experience.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
+  <p>必須項目を入力してください</p>
 <% end %>
 </div>
 
@@ -34,11 +30,11 @@
 <%= f.select :format, [['個人面接(1：1)','個人面接(1：1)'],['個人面接(1：多)','個人面接(1：多)'],['集団面接','集団面接'],['リモート面接','リモート面接'],['グループディスカッション','グループディスカッション']], include_blank: "選択してください" %></br>
 </br>
 <p class = "check-mark">雰囲気</p>
-<%= f.text_area :atomosphere, size: "60x5" %>
+<%= f.text_area :atomosphere, size: "32x5" %>
 <p class = "check-mark">質問</p>
-<%= f.text_area :question, size: "60x10" %>
+<%= f.text_area :question, size: "32x10" %>
 <p class = "check-mark">感想</p>
-<%= f.text_area :impression, size: "60x10" %>
+<%= f.text_area :impression, size: "32x10" %>
 </br>
 <div class = "check">*は必須項目です</div>
 </br>
