--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,10 +61,10 @@
   <div class="container">
   <div class="row no-gutters">
   <div class="col-md-5">
-  <h5 class = "text-white footer-text">Success! Job Hunting</h5>
+  <h5 class = "text-white footer-text">Job!Job!!Job!!!</h5>
   </div>
   <div class="col-md-7">
-  <h6 class="text-white mt-2 mb-3">CopyRight 2022 SJH</h6>
+  <h6 class="text-white mt-2 mb-3">CopyRight 2022 JJJ</h6>
   </div>
   </div>
   </div>
